Part A of exercise 6 is done